objects/FieloEE__RuleAction__c.object
<CustomObject>
    <description>Deprecated</description>
    <fields>
        <fullName>FieloEE__ConvertionType__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Convertion Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloEE__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Fix Value</fullName>
                </value>
                <value>
                    <fullName>Factor</fullName>
                </value>
                <value>
                    <fullName>Multiplier</fullName>
                </value>
                <value>
                    <fullName>Reward Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__ConvertionValue__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Convertion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>zz_deprecated_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationMonth__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Expiration Month</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldName__c</fullName>
        <defaultValue>&quot;Value__c&quot;</defaultValue>
        <description>Deprecated Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>zz_deprecated_Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstantReward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Instant Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Rule__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Rule</label>
        <referenceTo>FieloEE__Rule__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>RuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__StockControl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Stock Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>Deprecated Field</description>
        <inlineHelpText>Here you choose when to use the given rule. Best Option: Among applicable rules, the best option will be chosen. Always: This rule will always be applied.</inlineHelpText>
        <label>zz_deprecated_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best Option</fullName>
                    <default>true</default>
                    <label>Best Option</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Instant Reward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>zz_deprecated_Rule Action</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zz_deprecated_Rule Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloEE__Value_Different_of_0</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND ( OR( ISPICKVAL( FieloEE__ConvertionType__c , &apos;Factor&apos; ) , ISPICKVAL( FieloEE__ConvertionType__c , &apos;Multiplier&apos; ) ) ,  FieloEE__ConvertionValue__c == 0 ) , true , false )</errorConditionFormula>
        <errorMessage>You must put a value different of 0</errorMessage>
    </validationRules>
</CustomObject>